commit solo y modificacion  index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Copiar código
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Mi Sitio Web</h1>
+        <h1>Bienvenido </h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
